// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`path.sql > line 9 1`] = `
[
  "INSERT INTO PATH_TBL VALUES ('[(1,2),(3,4)]')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "path_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 29,
                            "sval": {
                              "sval": "[(1,2),(3,4)]",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`path.sql > line 38 1`] = `
[
  "SELECT f1 AS open_path FROM PATH_TBL WHERE isopen(f1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 28,
                  "relname": "path_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "open_path",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "FuncCall": {
                "args": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 50,
                    },
                  },
                ],
                "funcformat": "COERCE_EXPLICIT_CALL",
                "funcname": [
                  {
                    "String": {
                      "sval": "isopen",
                    },
                  },
                ],
                "location": 43,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`path.sql > line 40 1`] = `
[
  "SELECT f1 AS closed_path FROM PATH_TBL WHERE isclosed(f1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 30,
                  "relname": "path_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "closed_path",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "FuncCall": {
                "args": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 54,
                    },
                  },
                ],
                "funcformat": "COERCE_EXPLICIT_CALL",
                "funcname": [
                  {
                    "String": {
                      "sval": "isclosed",
                    },
                  },
                ],
                "location": 45,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`path.sql > line 42 1`] = `
[
  "SELECT pclose(f1) AS closed_path FROM PATH_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 38,
                  "relname": "path_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "closed_path",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 14,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pclose",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`path.sql > line 44 1`] = `
[
  "SELECT popen(f1) AS open_path FROM PATH_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 35,
                  "relname": "path_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "open_path",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 13,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "popen",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`path.sql > line 47 1`] = `
[
  "SELECT pg_input_is_valid('[(1,2),(3)]', 'path')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "[(1,2),(3)]",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 40,
                            "sval": {
                              "sval": "path",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
